# metaloop

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  HANDOFF.md  README.md  ROADMAP.md  STATE.md  package-lock.json  package.json  pyproject.toml
docs/: ALPHA_USER_GUIDE.md  TROUBLESHOOTING.md  agent_message_protocol.md  agent_message_protocol_research.md  architecture_v3_goal_runtime.md  codex-sdk能力边界.md  codex-sdk集成文档.md  codex_install_metaloop_skill.md  guided_autonomy_principle.md  intent_transmission_contract.md  intent_transmission_contract_research.md  metaloop_adaptive_goal_loop.md  metaloop_clean_library_mission_plan.md  metaloop_context_checkpoints.md  metaloop_design_autonomy.md  metaloop_dynamic_extension_protocol_upgrade.md  metaloop_engineering_cybernetics_principles.md  metaloop_engineering_governance_migration_plan.md  metaloop_engineering_governance_module_contract.md  metaloop_engineering_governance_vnext.md  metaloop_final_architecture_upgrade_spec.md  metaloop_final_clean_library_plan.md  metaloop_lightweight_protocol_reframing.md  metaloop_multi_thread_agent_protocol.md  metaloop_observability_control.md  metaloop_prompt_first_code_backed.md  metaloop_risk_proportional_review_upgrade_proposal.md  metaloop_routable_work_units.md  metaloop_six_gate_model.md  metaloop_task_history_architecture_review.md  metaloop_v2_trial_guide.md  metaloop_v3_1_alpha_optimization_spec.md  metaloop_v3_2_reliability_upgrade_spec.md  metaloop_v3_5_spec_workflow_discipline.md  metaloop_v3_trial_guide.md  minimal_v3_codex_goal_architecture.md  mission_capsule_constitution.md  (+4 more)
(+143 files in other folders)
